Added notebook 04 with optical flow and changed step in notebook 03

--- a/notebooks/02_yolo_detection_baseline.ipynb
+++ b/notebooks/02_yolo_detection_baseline.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "7235c1b5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "a2ceff0f",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "7919080e",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        " 'img_dir': 'img1'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "fd3545be",
    "metadata": {},
    "outputs": [
@@ -219,24 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "1c3fbf2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "500"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Para que sea más rápido: muestreamos cada N frames\n",
-    "STEP = 5 \n",
+    "# Muestreamos cada N frames, usamos todas en este caso\n",
+    "STEP = 1\n",
     "sampled_frames = all_frames[::STEP]\n",
     "len(sampled_frames)\n"
    ]
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "1e5251ed",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        " 79: 'toothbrush'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "a173a106",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ade9dcc6",
    "metadata": {},
    "outputs": [
@@ -482,125 +482,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detección YOLO: 100%|██████████| 100/100 [00:06<00:00, 14.71it/s]\n"
+      "Detección YOLO:  35%|███▌      | 175/500 [00:12<00:19, 16.27it/s]"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sequence</th>\n",
-       "      <th>frame</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>w</th>\n",
-       "      <th>h</th>\n",
-       "      <th>conf</th>\n",
-       "      <th>cls_id</th>\n",
-       "      <th>cls_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>v_-6Os86HzwCs_c009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>458.181396</td>\n",
-       "      <td>496.385742</td>\n",
-       "      <td>56.650757</td>\n",
-       "      <td>97.304443</td>\n",
-       "      <td>0.788891</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>v_-6Os86HzwCs_c009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1035.492676</td>\n",
-       "      <td>371.656799</td>\n",
-       "      <td>64.161133</td>\n",
-       "      <td>120.854004</td>\n",
-       "      <td>0.783783</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>v_-6Os86HzwCs_c009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>104.503922</td>\n",
-       "      <td>245.641418</td>\n",
-       "      <td>40.465927</td>\n",
-       "      <td>134.354858</td>\n",
-       "      <td>0.616957</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>v_-6Os86HzwCs_c009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>859.708618</td>\n",
-       "      <td>278.640381</td>\n",
-       "      <td>33.150146</td>\n",
-       "      <td>91.484558</td>\n",
-       "      <td>0.616271</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>v_-6Os86HzwCs_c009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>226.590363</td>\n",
-       "      <td>402.199585</td>\n",
-       "      <td>72.834412</td>\n",
-       "      <td>127.796204</td>\n",
-       "      <td>0.578812</td>\n",
-       "      <td>0</td>\n",
-       "      <td>person</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             sequence  frame            x           y          w           h  \\\n",
-       "0  v_-6Os86HzwCs_c009      1   458.181396  496.385742  56.650757   97.304443   \n",
-       "1  v_-6Os86HzwCs_c009      1  1035.492676  371.656799  64.161133  120.854004   \n",
-       "2  v_-6Os86HzwCs_c009      1   104.503922  245.641418  40.465927  134.354858   \n",
-       "3  v_-6Os86HzwCs_c009      1   859.708618  278.640381  33.150146   91.484558   \n",
-       "4  v_-6Os86HzwCs_c009      1   226.590363  402.199585  72.834412  127.796204   \n",
-       "\n",
-       "       conf  cls_id cls_name  \n",
-       "0  0.788891       0   person  \n",
-       "1  0.783783       0   person  \n",
-       "2  0.616957       0   person  \n",
-       "3  0.616271       0   person  \n",
-       "4  0.578812       0   person  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -631,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "90363426",
    "metadata": {},
    "outputs": [],
@@ -657,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "19ab86ee",
    "metadata": {},
    "outputs": [
@@ -745,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d0a06929",
    "metadata": {},
    "outputs": [
@@ -872,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "99481b7b",
    "metadata": {},
    "outputs": [
