Added videos to all notebooks, ball detection to notebook 04, pending polishing

--- a/notebooks/01_eda_sportsmot.ipynb
+++ b/notebooks/01_eda_sportsmot.ipynb
@@ -1022,6 +1022,60 @@
     "example_basketball = seq_df[(seq_df[\"sport\"] == \"basketball\") & (seq_df[\"split\"] == \"train\")].iloc[0]\n",
     "visualize_sequence_frames_with_boxes(example_basketball, num_frames=3, step=100)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vista rápida de la secuencia (animación) 🎞️\n",
+    "Muestra de frames consecutivos usando una animación ligera dentro del notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "\n",
+    "def animate_frames(frames, interval=50):\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "    im = ax.imshow(cv2.cvtColor(frames[0], cv2.COLOR_BGR2RGB))\n",
+    "\n",
+    "    def update(frame_idx):\n",
+    "        im.set_array(cv2.cvtColor(frames[frame_idx], cv2.COLOR_BGR2RGB))\n",
+    "        ax.set_title(f'Frame {frame_idx}')\n",
+    "        return [im]\n",
+    "\n",
+    "    anim = FuncAnimation(fig, update, frames=len(frames), blit=True, interval=interval)\n",
+    "    print('Generando animación de video...')\n",
+    "    html_video = HTML(anim.to_jshtml())\n",
+    "    plt.close(fig)\n",
+    "    return html_video\n",
+    "\n",
+    "# Tomar primeros 50 frames (o menos si la secuencia es corta)\n",
+    "frame_paths = sorted(list(img_dir.glob('*.jpg'))) or sorted(list((img_dir).glob('*.png')))\n",
+    "frame_paths = frame_paths[:50]\n",
+    "if not frame_paths:\n",
+    "    raise FileNotFoundError(f'No se encontraron frames en {img_dir}')\n",
+    "\n",
+    "frames = []\n",
+    "for p in frame_paths:\n",
+    "    img_bgr = cv2.imread(str(p))\n",
+    "    if img_bgr is not None:\n",
+    "        frames.append(img_bgr)\n",
+    "\n",
+    "if not frames:\n",
+    "    raise RuntimeError('No se pudieron cargar los frames para animación')\n",
+    "\n",
+    "video_animation = animate_frames(frames, interval=60)\n",
+    "video_animation\n"
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
