--- a/notebooks/01_eda_sportsmot.ipynb
+++ b/notebooks/01_eda_sportsmot.ipynb
@@ -455,11 +455,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1976ea74",
+   "metadata": {},
+   "source": [
+    "## 5. Vista rápida de la secuencia (animación) 🎞️\n",
+    "Muestra de frames consecutivos usando una animación ligera."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b0e452d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "\n",
+    "def animate_frames(frames, interval=50):\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "    im = ax.imshow(cv2.cvtColor(frames[0], cv2.COLOR_BGR2RGB))\n",
+    "\n",
+    "    def update(frame_idx):\n",
+    "        im.set_array(cv2.cvtColor(frames[frame_idx], cv2.COLOR_BGR2RGB))\n",
+    "        ax.set_title(f'Frame {frame_idx}')\n",
+    "        return [im]\n",
+    "\n",
+    "    anim = FuncAnimation(fig, update, frames=len(frames), blit=True, interval=interval)\n",
+    "    print('Generando animación de video...')\n",
+    "    html_video = HTML(anim.to_jshtml())\n",
+    "    plt.close(fig)\n",
+    "    return html_video\n",
+    "\n",
+    "# Tomar primeros 50 frames (o menos si la secuencia es corta)\n",
+    "frame_paths = sorted(list(img_dir.glob('*.jpg'))) or sorted(list((img_dir).glob('*.png')))\n",
+    "frame_paths = frame_paths[:50]\n",
+    "if not frame_paths:\n",
+    "    raise FileNotFoundError(f'No se encontraron frames en {img_dir}')\n",
+    "\n",
+    "frames = []\n",
+    "for p in frame_paths:\n",
+    "    img_bgr = cv2.imread(str(p))\n",
+    "    if img_bgr is not None:\n",
+    "        frames.append(img_bgr)\n",
+    "\n",
+    "if not frames:\n",
+    "    raise RuntimeError('No se pudieron cargar los frames para animación')\n",
+    "\n",
+    "video_animation = animate_frames(frames, interval=60)\n",
+    "video_animation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14d56f2f",
    "metadata": {},
    "source": [
     "\n",
-    "## 5. Estadísticas globales de las secuencias 📊"
+    "## 6. Estadísticas globales de las secuencias 📊"
    ]
   },
   {
@@ -551,7 +607,7 @@
    "id": "a3b25625",
    "metadata": {},
    "source": [
-    "## 6. Leer anotaciones gt/gt.txt y contar tracks / jugadores por frame 🎯\n",
+    "## 7. Leer anotaciones gt/gt.txt y contar tracks / jugadores por frame 🎯\n",
     "\n",
     "Según el formato MOT17, cada fila de gt.txt es: frame, id, x, y, w, h, conf, class, visibility."
    ]
@@ -709,7 +765,7 @@
    "id": "ec7ad1b0",
    "metadata": {},
    "source": [
-    "## 7. Estadísticas de anotaciones por secuencia 📈\n",
+    "## 8. Estadísticas de anotaciones por secuencia 📈\n",
     "\n",
     "Vamos a construir un DataFrame con:\n",
     "\n",
@@ -843,7 +899,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 8. Analizar densidad de jugadores y número de tracks 📊"
+    "## 9. Analizar densidad de jugadores y número de tracks 📊"
    ]
   },
   {
@@ -1022,60 +1078,6 @@
     "example_basketball = seq_df[(seq_df[\"sport\"] == \"basketball\") & (seq_df[\"split\"] == \"train\")].iloc[0]\n",
     "visualize_sequence_frames_with_boxes(example_basketball, num_frames=3, step=100)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vista rápida de la secuencia (animación) 🎞️\n",
-    "Muestra de frames consecutivos usando una animación ligera dentro del notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
-    "from matplotlib.animation import FuncAnimation\n",
-    "from IPython.display import HTML\n",
-    "\n",
-    "\n",
-    "def animate_frames(frames, interval=50):\n",
-    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "    ax.axis('off')\n",
-    "\n",
-    "    im = ax.imshow(cv2.cvtColor(frames[0], cv2.COLOR_BGR2RGB))\n",
-    "\n",
-    "    def update(frame_idx):\n",
-    "        im.set_array(cv2.cvtColor(frames[frame_idx], cv2.COLOR_BGR2RGB))\n",
-    "        ax.set_title(f'Frame {frame_idx}')\n",
-    "        return [im]\n",
-    "\n",
-    "    anim = FuncAnimation(fig, update, frames=len(frames), blit=True, interval=interval)\n",
-    "    print('Generando animación de video...')\n",
-    "    html_video = HTML(anim.to_jshtml())\n",
-    "    plt.close(fig)\n",
-    "    return html_video\n",
-    "\n",
-    "# Tomar primeros 50 frames (o menos si la secuencia es corta)\n",
-    "frame_paths = sorted(list(img_dir.glob('*.jpg'))) or sorted(list((img_dir).glob('*.png')))\n",
-    "frame_paths = frame_paths[:50]\n",
-    "if not frame_paths:\n",
-    "    raise FileNotFoundError(f'No se encontraron frames en {img_dir}')\n",
-    "\n",
-    "frames = []\n",
-    "for p in frame_paths:\n",
-    "    img_bgr = cv2.imread(str(p))\n",
-    "    if img_bgr is not None:\n",
-    "        frames.append(img_bgr)\n",
-    "\n",
-    "if not frames:\n",
-    "    raise RuntimeError('No se pudieron cargar los frames para animación')\n",
-    "\n",
-    "video_animation = animate_frames(frames, interval=60)\n",
-    "video_animation\n"
-   ],
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
