--- a/notebooks/04_tracking_optical_flow.ipynb
+++ b/notebooks/04_tracking_optical_flow.ipynb
@@ -903,15 +903,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d813e72",
    "metadata": {},
    "source": [
-    "## Filtrado de balón (sports ball) 🏀\nSeleccionamos únicamente las detecciones/tracklets del balón para revisar su cobertura."
+    "## Filtrado de balón (sports ball) 🏀\n",
+    "Seleccionamos únicamente las detecciones/tracklets del balón para revisar su cobertura."
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "7f2ef106",
+   "metadata": {},
    "outputs": [],
    "source": [
     "BALL_CLASSES = {\"sports ball\", \"ball\", \"basketball\", \"volleyball\"}\n",
@@ -1249,6 +1252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4311890",
    "metadata": {},
    "source": [
     "## Animación: tracks con Optical Flow (incluye balón) 🎥"
@@ -1256,8 +1260,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "5cb23273",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib.animation import FuncAnimation\n",
