--- a/notebooks/00_environment_check.ipynb
+++ b/notebooks/00_environment_check.ipynb
@@ -37,34 +37,20 @@
      "text": [
       "=== 🔍 Verificación del entorno de trabajo ===\n",
       "\n",
-      "Python version: 3.12.8 (v3.12.8:2dc476bcb91, Dec  3 2024, 14:43:20) [Clang 13.0.0 (clang-1300.0.29.30)]\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/qv/9fv1xlhx3jj4g1jk3_7ft1f40000gn/T/ipykernel_43018/3675999837.py:2: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  import pkg_resources\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✔ numpy           versión instalada: 1.26.4\n",
+      "Python version: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]\n",
+      "\n",
+      "✔ numpy           versión instalada: 2.2.6\n",
       "✔ pandas          versión instalada: 2.3.3\n",
-      "✔ scipy           versión instalada: 1.16.3\n",
-      "✔ opencv-python   versión instalada: 4.11.0\n",
+      "✔ scipy           versión instalada: 1.15.3\n",
+      "✔ opencv-python   versión instalada: 4.12.0\n",
       "✔ pillow          versión instalada: 12.0.0\n",
-      "✔ torch           versión instalada: 2.2.2\n",
-      "✔ torchvision     versión instalada: 0.17.2\n",
-      "✔ ultralytics     versión instalada: 8.3.235\n",
+      "✔ torch           versión instalada: 2.9.1+cpu\n",
+      "✔ torchvision     versión instalada: 0.24.1+cpu\n",
+      "✔ ultralytics     versión instalada: 8.3.236\n",
       "✔ imageio         versión instalada: 2.37.2\n",
       "✔ scikit-learn    versión instalada: 1.7.2\n",
       "✔ motmetrics      versión instalada: 1.4.0\n",
-      "✔ matplotlib      versión instalada: 3.10.7\n",
+      "✔ matplotlib      versión instalada: 3.10.8\n",
       "✔ seaborn         versión instalada: 0.13.2\n",
       "✔ tqdm            versión instalada: 4.67.1\n",
       "✔ jupyterlab      versión instalada: 4.5.0\n",
@@ -136,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "081e3e5b",
    "metadata": {},
    "outputs": [
@@ -147,19 +133,19 @@
       "=== 🔧 Verificaciones adicionales ===\n",
       "\n",
       "🧩 Torch / Torchvision:\n",
-      "  torch=2.2.2, torchvision=0.17.2\n",
+      "  torch=2.9.1+cpu, torchvision=0.24.1+cpu\n",
       "  Verifica compatibilidad en https://pytorch.org/ si algo falla.\n",
       "\n",
       "📐 Numpy / Matplotlib:\n",
-      "  numpy=1.26.4, matplotlib=3.10.7\n",
+      "  numpy=2.2.6, matplotlib=3.10.8\n",
       "  Requisito del proyecto: numpy < 2.3.0 y matplotlib < 3.11.0\n",
       "\n",
       "🦾 Ultralytics YOLO:\n",
-      "  ultralytics=8.3.235, torch=2.2.2\n",
+      "  ultralytics=8.3.236, torch=2.9.1+cpu\n",
       "  Ultralytics requiere PyTorch funcional con CUDA opcional.\n",
       "\n",
       "🎥 OpenCV:\n",
-      "  opencv-python=4.11.0\n",
+      "  opencv-python=4.12.0\n",
       "  Optical Flow debería funcionar correctamente.\n",
       "\n",
       "=== 🟢 Resumen rápido ===\n",
@@ -222,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "48461eeb",
    "metadata": {},
    "outputs": [
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9f5446b1",
    "metadata": {},
    "outputs": [
@@ -285,8 +271,8 @@
       "=== 🦾 Smoke test: YOLO + OpenCV ===\n",
       "✔ Modelo YOLO cargado correctamente.\n",
       "\n",
-      "0: 480x640 (no detections), 86.3ms\n",
-      "Speed: 4.6ms preprocess, 86.3ms inference, 0.4ms postprocess per image at shape (1, 3, 480, 640)\n",
+      "0: 480x640 (no detections), 201.6ms\n",
+      "Speed: 36.6ms preprocess, 201.6ms inference, 0.9ms postprocess per image at shape (1, 3, 480, 640)\n",
       "✔ Inferencia YOLO ejecutada correctamente.\n",
       "  Número de detecciones en la imagen dummy: 0\n"
      ]
@@ -361,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
